# cb_maintenance

./: .gitignore  README.md  SUBMISSION.md  license.txt  pyproject.toml
Software Engineer Case/Software Engineer Case/: PM_Case_Before.xlsx  PM_Case_Candidate_Brief.md  PM_Case_Outlets.xlsx  PM_Case_Ticket_Buckets.xlsx  PM_Case_User_Master.csv
Software Engineer Case/__MACOSX/Software Engineer Case/: ._PM_Case_Candidate_Brief.md
cb_maintenance/: boot.py  hooks.py  install.py  modules.txt
cb_maintenance/cb_maintenance/doctype/cb_asset/: cb_asset.js  cb_asset.json  cb_asset.py  cb_asset_list.js
cb_maintenance/cb_maintenance/doctype/cb_asset_type/: cb_asset_type.js  cb_asset_type.json  cb_asset_type.py  cb_asset_type_list.js
cb_maintenance/cb_maintenance/doctype/cb_maintenance_staff/: cb_maintenance_staff.js  cb_maintenance_staff.json  cb_maintenance_staff.py  cb_maintenance_staff_list.js
cb_maintenance/cb_maintenance/doctype/cb_maintenance_ticket/: cb_maintenance_ticket.js  cb_maintenance_ticket.json  cb_maintenance_ticket.py  (+1 more)
cb_maintenance/cb_maintenance/utils/: dashboard.py  pm_utils.py
cb_maintenance/config/: desktop.py
cb_maintenance/public/css/: cb_maintenance.bundle.css  cb_maintenance.css
cb_maintenance/public/js/: cb_desk_registry.js  cb_desk_route.js  cb_desk_sidebar.js  cb_form_ux.js  cb_list_ux.js
cb_maintenance/seed_data/: outlets.json  pm_tracker.json  staff.json  tickets_maintenance.json  tickets_spare_parts.json
docker/: apps.json  bench-entrypoint.sh  docker-compose.yml
scripts/: build_seed_json.py  validate_seed.py  wsl_bench_setup.sh
(+30 files in other folders)
