[project]
name = "cb_maintenance"
version = "0.1.1"
authors = [
    { name = "Mihir Vora", email = "er.voramihir@gmail.com" }
]
description = "California Burrito maintenance operations (PM + reactive tickets)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
